Use newer java features
Refactors various things to make use of newer java features, including
record classes, text blocks, and new APIs.